--- a/public/cek-stok.html
+++ b/public/cek-stok.html
@@ -98,8 +98,8 @@
         <div class="brand">
           <div class="logo" aria-hidden="true">ZS</div>
           <div class="title">
-            <h1>Zain Store <span style="color:var(--brand)">•</span> Live Stock XL Akrab</h1>
-            <p>Restok harian sekitar <b>15:00 WIB</b>. Tampilan teks ala WhatsApp—langsung siap salin!</p>
+            <h1>Zain Store <span style="color:var(--brand)">•</span> Stock XL Akrab</h1>
+            <p>Produk harian restock sekitar <b>15:00 WIB</b>. Klik tombol di bawah untuk melakukan order/transaksi via Bot!</p>
           </div>
         </div>
       </div>
