--- a/public/cek-stok.html
+++ b/public/cek-stok.html
@@ -129,7 +129,7 @@
 
       <!-- Footer -->
       <div class="footer">
-        <div>© <span id="year"></span> Zain Store • UI v2 (Minimal)</div>
+        <div>© <span id="year"></span> Zain Store • Cuan Maksimal</div>
         <div class="links">
           <a class="a" href="https://wa.me/6281252162402" target="_blank" rel="noopener" title="Chat Owner">
             👑 Chat Owner (0812-5216-2402)
