--- a/public/cek-stok.html
+++ b/public/cek-stok.html
@@ -239,7 +239,7 @@
       btn.disabled = true;
       btnIcon.innerHTML = '<span class="spinner" aria-hidden="true"></span>';
       btnLabel.textContent = "Memuat…";
-      meta.textContent = "Menghubungi server supplier…";
+      meta.textContent = "Memuat stok produk Zain Store…";
       out.textContent = "";
       skel.hidden = false;
       setPill('Status: <b>Memuat…</b>');
