--- a/public/cek-stok.html
+++ b/public/cek-stok.html
@@ -90,7 +90,7 @@
         <div class="logo" aria-hidden="true"></div>
         <div>
           <h1>Zain Store • Stock XL Akrab</h1>
-          <div class="sub">Produk harian restock sekitar <b>15:00 WIB</b>. Klik tombol di bawah untuk cek stok.</div>
+          <div class="sub">Produk bulanan dan harian restock otomatis setiap jam <b>06:00 WIB</b>. Klik tombol di bawah untuk cek stok.</div>
         </div>
       </div>
 
